ディレクトリ構成など変更

--- a/public/howto.html
+++ b/public/howto.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>チャンネルの掲載方法</title>
-  <link href="css/yp.css" rel="stylesheet" type="text/css">
+  <link href="stylesheets/yp.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" href="favicon.ico">
 </head>
@@ -16,14 +16,14 @@
 
     <h3>PeerCastの設定</h3>
     <p>
-        イエローページに 035p.example.jp を指定する。
+        イエローページに yp.example.jp を指定する。
     </p>
 
     <h3>配信設定</h3>
     <p>
         ストリームURL、チャンネル名、詳細等を普通に指定する(チャンネル名空白は出来ません)<br>
-        ジャンルの頭に <strong>035p</strong> を付ける<br>
-        もうちょっと具体的に書くと ジャンル＝035p○○ジャンル名  みたいな感じ<br>
+        ジャンルの頭に <strong>yp</strong> を付ける<br>
+        もうちょっと具体的に書くと ジャンル＝yp○○ジャンル名  みたいな感じ<br>
         ○○の中に以下の文字列を加える事によって色々なオプションの指定が出来ます、以下説明。<br>
         ?：リスナー数非表示(-1)<br>
     </p>
